imgages - display block fixes chrome resize issue where overflow was off by 1px

--- a/wires2/css/styles.css
+++ b/wires2/css/styles.css
@@ -1,5 +1,5 @@
-html {font-size:100%;}
-body {font-size:10px;padding:0;}
+html {font-size:100%;padding:0;margin:0;}
+body {font-size:10px;padding:0;margin:0;}
 .container {padding:12px 0 14px;}
 
 #masthead {background:#222;}
@@ -14,12 +14,12 @@ body {font-size:10px;padding:0;}
 
 footer {background:#777;padding-bottom:210px;color:#fff;padding-top:20px;}
 
-img {width:100%;height:auto;}
+img {width:100%;height:auto;display:block;}
 
 h1, h2, h3,h4, h5, h6 {font-weight:normal;font-size:1.4em;}
 h1 span, h2 span, h3 span, h4 span, h5 span, h6 span {font-size:0.8em;}
 
-p {line-height:1.5;margin-bottom: 12px;font-size:1.4em;}
+p {line-height:1.5;margin-bottom: 12px;font-size:1.0em;}
 
 .cta-wrap {padding-top:10px;}
 .cta-wrap-center {text-align:center;}
@@ -59,36 +59,21 @@ b {font-weight:bold;}
 
 
 @media (max-width: 767px) {
-.container {padding-left:11px!important;padding-right:11px!important;}
-.container .row {margin-left:-3.1%;} /* 3.1? erm */
+.container {padding-left:0!important;padding-right:0px!important;}
+.container .row {margin-left:-3%;} /* 3.1? erm */
 .container .row [class*="span"] {width:97%;margin-left:3%;float:left;}
-.container .row .mspan1 {width:13.66666666666%;}
-.container .row .mspan2 {width:30.33333333333%;}
+.container .row .mspan1 {width:13.66666666666666%;}
+.container .row .mspan2 {width:30.33333333333333%;}
 .container .row .mspan3 {width:47%;}
-.container .row .mspan4 {width:63.66666666666%;}
-.container .row .mspan5 {width:80.33333333333%;}
+.container .row .mspan4 {width:63.66666666666666%;}
+.container .row .mspan5 {width:80.33333333333333%;}
 .container .row .mspan6 {width:97%;}
 
-.lg {display:none;}
-.md {display:block;}
 
-.nopadding {padding-left:0!important;padding-right:0!important;}
-.nomargin {margin-left:0!important;margin-right:0!important;}
-
-#main-1 .container {padding-top:0;}
-#main-logo {padding-left:14px;}
-.prevwrap {margin-left:0!important;}
-.nextwrap {margin-right:0!important;float:right!important;}
-.prevwrap .cta1 {padding-right:28px;font-size:16px;}
-.nextwrap .cta1{padding-left:28px;font-size:16px;}
-
-.usergallery .span2 {width:21.969696969696%;float:left;margin-left:1.515151515152%;margin-right:1.515151515152%;}
 
 }
 
 @media (max-width: 600px) {
-.md {display:none;}
-.sm {display:block;}
 .nav li a {font-size:13px;padding:16px 8px 5px 8px;}
 .nav li a.signin {font-weight:bold;background:none;color:#fff;}
 .cta1 {font-size: 14px;}
@@ -98,11 +83,11 @@ b {font-weight:bold;}
 }
 
 @media (max-width: 500px) {
-.container .row .m1span1 {width:13.66666666666%;}
-.container .row .m1span2 {width:30.33333333333%;}
+.container .row .m1span1 {width:13.6666666666666%;}
+.container .row .m1span2 {width:30.3333333333333%;}
 .container .row .m1span3 {width:47%;}
-.container .row .m1span4 {width:63.66666666666%;}
-.container .row .m1span5 {width:80.33333333333%;}
+.container .row .m1span4 {width:63.6666666666666%;}
+.container .row .m1span5 {width:80.3333333333333%;}
 .container .row .m1span6 {width:97%;}
 #main-logo {font-size:25px;}
 .nav li a {font-size:12px;padding-top:18px;}
@@ -121,11 +106,11 @@ b {font-weight:bold;}
 
 
 @media (max-width: 340px) {
-.container .row .m2span1 {width:13.66666666666%;}
-.container .row .m2span2 {width:30.33333333333%;}
+.container .row .m2span1 {width:13.66666666666666%;}
+.container .row .m2span2 {width:30.33333333333333%;}
 .container .row .m2span3 {width:47%;}
-.container .row .m2span4 {width:63.66666666666%;}
-.container .row .m2span5 {width:80.33333333333%;}
+.container .row .m2span4 {width:63.66666666666666%;}
+.container .row .m2span5 {width:80.33333333333333%;}
 .container .row .m2span6 {width:97%;}
 
 .usergallery .span2 {width: 46.969696969697%;float:left; margin-left:1.515151515152%;margin-right:1.515151515152%;}
